kubernetes/workflows/argo/base/workflow-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
  labels:
    app: workflow-controller
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: workflow-controller
  template:
    metadata:
      labels:
        app: workflow-controller
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c

      serviceAccountName: argo-workflow-controller
      containers:
        - name: controller
          image: argoproj/workflow-controller:v3.6.10
