kubernetes/workflows/argo/base/argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: workflows
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c
      serviceAccountName: argo-server
      containers:
        - name: argo-server
          image: argoproj/argocli:v3.6.10
          args: [ "server", "--auth-mode=server", "--secure=false" ]
          ports:
            - containerPort: 2746
---
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: workflows
spec:
  selector:
    app: argo-server
  ports:
    - port: 80
      targetPort: 2746

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-https
  namespace: workflows
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-traefik-auth-traefik@kubernetescrd"
    # traefik.ingress.kubernetes.io/router.middlewares: "workflow-sablier-argo@kubernetescrd"
spec:
  tls:
  - secretName: argo-bas-tls
  rules:
  - host: argo.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 80
